syntax = "proto3";
package web;

option go_package = "web/v1/user;web";

import "tagger/tagger.proto";

message UserRegisterRequest {
  string NickName = 1 [(tagger.tags) = "binding:\"required\""];
  string Password = 2 [(tagger.tags) = "binding:\"required\""];
  string Avatar = 3 [(tagger.tags) = "binding:\"required\""];
  int32 Gender = 4 [(tagger.tags) = "binding:\"required,oneof=0 1 2\""];
  string Email = 5 [(tagger.tags) = "binding:\"required\""];
  string VerifyCode = 6 [(tagger.tags) = "binding:\"required\""];
}

message UserRegisterResponse {}